c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/compound_right_bitshift.c
int main(void) {
    // Can't perform compound bitwise operations with doubles
    int i = 1000;
    i >>= 2.0;
    return i;
}